--- a/site_1/package.json
+++ b/site_1/package.json
@@ -1,8 +1,8 @@
 {
   "name": "site_1_react_port",
-  "version": "1.0.0",
+  "version": "0.1.0",
   "private": true,
-  "homepage" : ".",
+  "homepage": ".",
   "dependencies": {
     "@testing-library/jest-dom": "^5.17.0",
     "@testing-library/react": "^13.4.0",
@@ -10,6 +10,7 @@
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-scripts": "5.0.1",
+    "sass": "^1.80.5",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
