--- a/site_3/package.json
+++ b/site_3/package.json
@@ -1,6 +1,6 @@
 {
   "name": "site_3_react_port",
-  "version": "1.0.0",
+  "version": "1.0.1",
   "private": true,
   "homepage": ".",
   "dependencies": {
@@ -10,6 +10,7 @@
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-scripts": "5.0.1",
+    "sass": "^1.80.6",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
